--- a/linearalgebra.tex
+++ b/linearalgebra.tex
@@ -5,6 +5,9 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 \begin{document}
+	\theoremstyle{definition}
+	\newtheorem{defn}{Definition}[section]
+	
 	\section{Linear Algebra}
 	
 	
