--- a/stats.tex
+++ b/stats.tex
@@ -64,7 +64,7 @@
 	\end{defn}
 
 	\begin{defn}{\textbf{Expected Value of a Random Variable}}
-	The expected value of random variable $X$ is the weighted average of the values that X can take on where each possible value is weighted by its respective probabilit i.e. \\
+	The expected value of random variable $X$ is the weighted average of the values that X can take on where each possible realization value is weighted by its respective probability i.e. \\
 	\begin{align}
 		\mathbf{E}[X] = \sum\limits_{x \in R_X}xp_X(x)
 	\end{align}
@@ -83,6 +83,7 @@
 		It is a measure of dispersion of a random variable. Let $X$ be a random variable. The variance of X, denoted by $Var[X]$ is defined as follows:\\
 		\begin{align}
 			Var[X] = \mathbf{E}[(X - \mathbf{E}[X])^2] = \mathbf{E}[\overline{X}^2]
+			 = \mathbf{E}[X^2] - \mathbf{E}[X]^2
 		\end{align}
 		You can also think of it as mean of the square of the deviations of original random variable.
 	\end{defn}
