--- a/stats.tex
+++ b/stats.tex
@@ -70,6 +70,15 @@
 	\end{align}
 	\end{defn}
 
+	\begin{defn}{\textbf{Quantile}}
+	The $p-$Quantile of a Random Variable $X$ is given $p \in (0,1)$
+	and $X$ having cumulative distribution function(cdf) to be $F_X(x)$, the $p-$Quantile is:
+	\begin{align}
+	Q_X(p) = min \{ x \in R : F_X(x) \ge p \}
+	\end{align}
+	This translates roughtly equivalently to the definition of percentiles. e.g 0.5-quantile is a median. 0.25-Quantiles are quartiles etc.
+	\end{defn}
+
 	\begin{defn}{\textbf{Deviation of a Random Variable}}
 	The Deviation of a Random Variable is its difference from its mean value/Expected value. It is denoted by 
 	\begin{align}
